--- a/mod/CWEWildWasteland/localisation/nwo_parties.csv
+++ b/mod/CWEWildWasteland/localisation/nwo_parties.csv
@@ -2761,6 +2761,7 @@ party_populist_0_XMS;Populist Party;;;;;;;;;;;;;x;;;;;;;;;;;;;;;;
 party_progressive_0_XMS;Progressive Party;;;;;;;;;;;;;x;;;;;;;;;;;;;;;;
 party_socialist_0_XMS;Socialist Party;;;;;;;;;;;;;x;;;;;;;;;;;;;;;;
 party_traditionalist_0_XMS;Traditionalist Party;;;;;;;;;;;;;x;;;;;;;;;;;;;;;;
+party_socialist_0_XMU;Arab Socialist Baʿath Party;;;;;;;;;;;;;x;;;;;;;;;;;;;;;;
 party_communist_0_XNA;Workers Party;;;;;;;;;;;;;x;;;;;;;;;;;;;;;;
 party_conservative_0_XNA;Republican Party;;;;;;;;;;;;;x;;;;;;;;;;;;;;;;
 party_liberal_0_XNA;Democratic Party;;;;;;;;;;;;;x;;;;;;;;;;;;;;;;
